# persbot

./: .coverage  .env.example  .gitignore  1  CLAUDE.md  ENHANCEMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  MODAL_DEPLOYMENT_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  REFACTORING_MIGRATION.md  SEMANTIC_SEARCH_GUIDE.md  TEST_PROGRESS.md  custom_prompts.json  finetune_state.json  main.py  pyproject.toml  requirements.txt  run_dev.py  scrap_soye.py  session-ses_3bf5.md  soyebot.db  test_patch.py
.claude/commands/: gp.md
.omc/sessions/: 0215e79a-d94b-4d80-af2a-820141c3297a.json  031122fa-afa1-4125-a73a-06e6e5997c0c.json  0a4e099d-6c5f-4828-a970-aa47ced12c39.json  0c76b320-1afd-4493-9fdf-b363c0311ba4.json  0f5d5f33-9bb5-4023-8c09-f903f5fefa81.json  110b0808-7089-453b-9095-7e77b901cc27.json  165f69be-3e28-4429-86a4-ff83bfe490f6.json  188cef1c-a314-4d62-ae9d-539d6e8d7e30.json  18cdf5a2-9883-4c05-8c8a-c2204377f15e.json  23c719f9-1fc3-4826-87b2-f96eae60fa98.json  247f5fc8-7c53-41e5-bc31-b4eceb1ea703.json  306c0cf6-9287-4f05-8880-d1d72f0c3239.json  (+29 more)
.serena/: project.yml
bot/: session.py
bot/cogs/: help.py  (+2 more)
data/: models.json
database/: models.py
persbot/: AGENTS.md  config.py  constants.py  exceptions.py  main.py  prompts.py  rate_limiter.py  utils.py
scripts/: merge_lora.py  modal_inference_server.py  modal_inference_server_v2.py  modal_openai_api.py  test_modal_endpoint.py
services/: gemini_service.py  memory_service.py  optimization_service.py
soyebot/: CODEBASE_SUMMARY_KO.md  IMPLEMENTATION_SUMMARY.md  config.py  main.py  metrics.py  prompts.py  requirements.txt  utils.py
tests/: SUMMARY.md  TEST_RESULTS.md  conftest.py  test_abort_propagation.py  test_assistant_cog.py  test_assistant_utils.py  test_auto_channel_cog.py  test_base.py  test_bot_infrastructure.py  test_buffer.py  test_cache_manager.py  test_cache_service.py  test_channel_tools.py  test_chat_handler.py  test_chat_models.py  test_chat_use_case.py  test_circuit_breaker.py  test_cogs.py  test_config.py  test_constants.py  test_discord_cache.py  test_domain.py  test_exceptions.py  test_gemini_service.py  test_guild_tools.py  test_handlers.py  test_history_pruner.py  test_image_model_service.py  test_image_service.py  test_image_tools.py  test_image_use_case.py  test_llm_service.py  test_main.py  test_media_tools.py  test_memory_tools.py  test_model_selector_cog.py  test_model_usage_service.py  test_model_wrappers.py  test_openai_service.py  test_persona_cog.py  (+42 more)
(+209 files in other folders)
