[project]
name = "soyebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "chzzkpy>=1.0.0",
    "discord-py>=2.3.0",
    "google-generativeai>=0.3.0",
    "numpy>=2.2.6",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.44",
]
